--- a/index.html
+++ b/index.html
@@ -157,33 +157,39 @@ GET INVOLVED
 
     <div class="row">
         <div class="container">
-            <div class="col-md-2" style="float: right;">
+            <div class="col-md-1" style="float: left;">
                 <div class="flags">
-                    <a href=""><img src="images/bf.png" alt="" class="img-responsive" data-toggle="tooltip" data-placement="top" title="Burkina Faso"></a><br>
+                    <div class="West-tab">
+                        <button>West Africa</button>
+                         <a href="flags.html" class="button">West Africa</a>
 
-                    <a href=""><img src="images/gh.png" alt="" class="img-responsive" data-toggle="tooltip" data-placement="top" title="Ghana"></a><br>
 
-                    <a href=""><img src="images/togo.png" alt="" class="img-responsive" data-toggle="tooltip" data-placement="top" title="Togo"></a><br>
+                    </div>
+                    <a href="flags.html"><img src="images/bf.png" alt="" class="img-responsive" data-toggle="tooltip" data-placement="top" title="Burkina Faso"></a><br>
 
-                    <a href=""><img src="images/mali.png" alt="" class="img-responsive" data-toggle="tooltip" data-placement="top" title="Mali"></a><br>
-                    <a href=""><img src="images/mauritania.png" alt="" class="img-responsive" data-toggle="tooltip" data-placement="top" title="Mauritania"></a><br>
-                    <a href=""><img src="images/gambia.png" alt="" class="img-responsive" data-toggle="tooltip" data-placement="top" title="Gambia"></a><br>
-                    <a href=""><img src="images/capeverde.png" alt="" class="img-responsive" data-toggle="tooltip" data-placement="top" title="Capeverde"></a><br>
-                    <a href=""><img src="images/cote.png" alt="" class="img-responsive" data-toggle="tooltip" data-placement="top" title="Cote d'Ivoire"></a><br>
-                    <a href=""><img src="images/benin.png" alt="" class="img-responsive" data-toggle="tooltip" data-placement="top" title="Benin"></a><br>
-                    <a href=""><img src="images/niger.png" alt="" class="img-responsive" data-toggle="tooltip" data-placement="top" title="Niger"></a><br>
-                    <a href=""><img src="images/guinbisau.png" alt="" class="img-responsive" data-toggle="tooltip" data-placement="top" title="Guinea Bissau"></a><br>
-                    <a href=""><img src="images/guinea.png" alt="" class="img-responsive" data-toggle="tooltip" data-placement="top" title="Guinea"></a><br>
-                    <a href=""><img src="images/liberia.png" alt="" class="img-responsive" data-toggle="tooltip" data-placement="top" title="Liberia"></a><br>
-                    <a href=""><img src="images/senegal.png" alt="" class="img-responsive" data-toggle="tooltip" data-placement="top" title="Senegal"></a><br>
-                    <a href=""><img src="images/sierra.png" alt="" class="img-responsive" data-toggle="tooltip" data-placement="top" title="Sierra Leone"></a><br>
-                    <a href=""><img src="images/nigeria.png" alt="" class="img-responsive" data-toggle="tooltip" data-placement="top" title="Nigeria"></a><br>
+                    <a href="flags.html"><img src="images/gh.png" alt="" class="img-responsive" data-toggle="tooltip" data-placement="top" title="Ghana"></a><br>
+
+                    <a href="flags.html"><img src="images/togo.png" alt="" class="img-responsive" data-toggle="tooltip" data-placement="top" title="Togo"></a><br>
+
+                    <a href="flags.html"><img src="images/mali.png" alt="" class="img-responsive" data-toggle="tooltip" data-placement="top" title="Mali"></a><br>
+                    <a href="flags.html"><img src="images/mauritania.png" alt="" class="img-responsive" data-toggle="tooltip" data-placement="top" title="Mauritania"></a><br>
+                    <a href="flags.html"><img src="images/gambia.png" alt="" class="img-responsive" data-toggle="tooltip" data-placement="top" title="Gambia"></a><br>
+                    <a href="flags.html"><img src="images/capeverde.png" alt="" class="img-responsive" data-toggle="tooltip" data-placement="top" title="Capeverde"></a><br>
+                    <a href="flags.html"><img src="images/cote.png" alt="" class="img-responsive" data-toggle="tooltip" data-placement="top" title="Cote d'Ivoire"></a><br>
+                    <a href="flags.html"><img src="images/benin.png" alt="" class="img-responsive" data-toggle="tooltip" data-placement="top" title="Benin"></a><br>
+                    <a href="flags.html"><img src="images/niger.png" alt="" class="img-responsive" data-toggle="tooltip" data-placement="top" title="Niger"></a><br>
+                    <a href="flags.html"><img src="images/guinbisau.png" alt="" class="img-responsive" data-toggle="tooltip" data-placement="top" title="Guinea Bissau"></a><br>
+                    <a href="flags.html"><img src="images/guinea.png" alt="" class="img-responsive" data-toggle="tooltip" data-placement="top" title="Guinea"></a><br>
+                    <a href="flags.html"><img src="images/liberia.png" alt="" class="img-responsive" data-toggle="tooltip" data-placement="top" title="Liberia"></a><br>
+                    <a href="flags.html"><img src="images/senegal.png" alt="" class="img-responsive" data-toggle="tooltip" data-placement="top" title="Senegal"></a><br>
+                    <a href="flags.html"><img src="images/sierra.png" alt="" class="img-responsive" data-toggle="tooltip" data-placement="top" title="Sierra Leone"></a><br>
+                    <a href="flags.html"><img src="images/nigeria.png" alt="" class="img-responsive" data-toggle="tooltip" data-placement="top" title="Nigeria"></a><br>
 
 
 
                 </div>
             </div>
-            <div class="col-md-10">
+            <div class="col-md-11">
 
 
                 <!--SLIDER/CAROUSEL FOR GALLERY-->
@@ -242,7 +248,7 @@ GET INVOLVED
                 <P>The West Africa Centre for Counter-Extremism (WACCE) is an independent, not-forprofit civil society organization focused on counterterrorism research and outreach in West Africa. WACCE works to engage with the local community; youth groups, parents, teachers, local associations and the religious community as well as state actors in countering the underpinnings of radicalization and violent extremism. Our research work and outreach works are intended at making effective contribution to State and Regional counter terrorism and security strategy.
 
                 </P>
-                <div class="col-md-5" style="width: 39%; float: right;">
+                <div class="col-md-5" style="width: 39%; float: left;">
                     <div class="row">
                         <div class="">
                             <div class="thumbnail">
@@ -275,7 +281,7 @@ GET INVOLVED
                             </div>
                         </div>
 
-                        <div class="">
+                       <!--  <div class="">
                             <div class="thumbnail">
                                 <a href="images/_DSC0230.JPG">
                                     <img src="images/_DSC0230.JPG" alt="Fjords" style="width:100%">
@@ -284,22 +290,22 @@ GET INVOLVED
                                     </div>
                                 </a>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
-                <div class="col-md-5" style="float: left;width: 55%; padding-left: 0px;">
+                <div class="col-md-5" style="float: right;width: 55%; padding-left: 0px;">
                    <div class="column3">
-                        <p id="HEADINGS" style="color: #01577d;font-weight: 700;">COUNTERING VIOLENT EXTREMISM</p><br>From the Rwandan culture, the word Mafubo has become a name with an international destiny; Easy to write, read and pronounce, Mafubo means the great deal of compassion for the other; she is the one who forgets herself to support and especially to spare the other, shame, humiliation and degradation.
+                        <p id="HEADINGS" style="color: #01577d;font-weight: 700;">COUNTERING VIOLENT EXTREMISM</p><br>From the Rwandan culture, the word Mafubo has become a name with an international destiny; Easy to write, read and pronounce, Mafubo means the great deal of compassion for the other; she is the one who forgets herself to support and especially to spare the other, shame,culture, the word Mafubo has of compassion for the other; she is the one who forgets herself to support and especially to spare the other, shame, humiliation and degradation Mafubo has become a name with an international destiny; Easy to write, read and pronounce, Mafubo means the great deal of compassion for the other; she is the one who forgets herself to support and especially to spare the  humiliation and degradation.
                         <br><br>
                     </div>
                     <div class="column3">
-                        <p id="HEADINGS" style="color: #01577d;font-weight: 700;">RESEARCH REPORTS </p><br>From the Rwandan culture, the word Mafubo has become a name with an international destiny; Easy to write, read and pronounce, Mafubo means the confidante of compassion for the other; she is the one who forgets herself to support and especially to spare the other, shame, humiliation and degradation. who forgets herself to support and especially to spare the other, shame, humiliation and degradation.<br><br>
+                        <p id="HEADINGS" style="color: #01577d;font-weight: 700;">RESEARCH REPORTS </p><br>From the Rwandan culture, the word Mafubo has become a name with an international destiny; Easy to write, read and pronounce, Mafubo means the confidante of compassion for the other; she is the one who forgets herself to support and especially to spare the other, shame, humiliation and degradation. who forgets herself to support and especially to spare the other,culture, the word Mafubo has of compassion for the other; she is the one who forgets herself to support and especially to spare the other, shame, humiliation and degradation Mafubo has become a name with an international destiny; Easy to write, read and pronounce, Mafubo means the great deal of compassion for the other; she is the one who forgets herself to support and especially to spare the  shame, humiliation and degradation.<br><br>
                     </div>
                     <div class="column3">
-                        <p id="HEADINGS" style="color: #01577d;font-weight: 700;">PROJECTS </p><br>From the Rwandan culture, the word Mafubo has become a name with an international destiny; Easy to write, read and pronounce, Mafubo means the confidante with a compassion Mafubo has become a name with an international destiny; Easy to write, read and pronounce, Mafubo means the great deal of compassion for the other; she is the one who forgets herself to support and especially to spare the other, shame, humiliation and for the other; she is the one who forgets herself to support and especially to spare the other, shame, humiliation and degradation.<br><br>
+                        <p id="HEADINGS" style="color: #01577d;font-weight: 700;">PROJECTS </p><br>From the Rwandan culture, the word Mafubo has become a name with an international destiny; Easy to write, read and pronounce, Mafubo means the confidante with a compassion Mafubo has become a name with an international destiny; Easy to write, read and pronounce, Mafubo means the great deal of compassion for the other; she is the one who forgets herself to support and especially to spare the other, shame, humiliation and for the other; she is the one who forgets herself to sculture, the word Mafubo has of compassion for the other; she is the one who forgets herself to support and especially to spare the other, shame, humiliation and degradation Mafubo has become a name with an international destiny; Easy to write, read and pronounce, Mafubo means the great deal of compassion for the other; she is the one who forgets herself to support and especially to spare the upport and especially to spare the other, shame, humiliation and degradation.<br><br>
                     </div>
                     <div class="column3">
-                        <p id="HEADINGS" style="color: #01577d;font-weight: 700;">UPCOMING EVENTS </p><br>From the Rwandan culture, the word Mafubo has of compassion for the other; she is the one who forgets herself to support and especially to spare the other, shame, humiliation and degradation Mafubo has become a name with an international destiny; Easy to write, read and pronounce, Mafubo means the great deal of compassion for the other; she is the one who forgets herself to support and especially to spare the other, shame, humiliation and .<br><br>
+                        <p id="HEADINGS" style="color: #01577d;font-weight: 700;">UPCOMING EVENTS </p><br>From the Rwandan culture, the word Mafubo has of compassion for the other; she is the one who forgets herself to support and especially to spare the other, shame, humiliation and degradation Mafubo has become a name with an international destiny; Easy to write, read and pronounce, Mafubo means the great deal of compassion for the other; she is the one who forculture, the word Mafubo has of compassion for the other; she is the one who forgets herself to support and especially to spare the other, shame, humiliation and degradation Mafubo has become a name with an international destiny; Easy to write, read and pronounce, Mafubo means the great deal of compassion for the other; she is the one who forgets herself to support and especially to spare the gets herself to support and especially to spare the other, shame, humiliation and .<br><br>
                     </div>
                 </div>
 
